<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluecon</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">Oh! BLE is not supported!</string>
    <string name="ble_is_supported">Greetings! BLE is supported!</string>
    <string name="ble_is_enabled">Greetings! Bluetooth is opened!</string>
    <string name="bluetooth_is_supported">Greetings! Bluetooth is supported!</string>
    <string name="start_service">begin scanning</string>
    <string name="stop_service">stop scanning</string>
    <string name="enableTTS">enableTTS</string>
    <string name="disableTTS">disable TTS</string>
    <string name="button_pressed">test button is pressed!</string>
    <string name="pref_audio">audio</string>
    <string name="pref_approaching">Audio notice</string>
    <string name="pref_audio_summary">when you get approach a beacon it will send the notice \"your text\" + beaconsName</string>
    <string name="pref_scan">Scan</string>
    <string name="pref_approaching_default"></string>
    <string name="pref_guide_switch_summary">using audio guide to indicate the nearest beacon</string>
    <string name="pref_guide_switch">Audio guide swtich</string>
    <string name="pref_threshold">RSSI threshold</string>
    <string name="pref_threshold_summary">75 means \"-75db\", and so on</string>
    <string name="pref_frequency_summary">Scanning Frequency</string>
    <string name="pref_frequency">Scanning frequency</string>
    <string name="pref_network">NETWORK</string>
    <string name="pref_link">Download Source</string>
    <string name="pref_link_summary">Beacons database source url</string>
    <string name="pref_link_default">http://meschup.hcilab.org/map/</string>
    <string name="network_not_avaliable">Sorry, please check the network settings, database may not be loaded</string>
    <string name="update_button">update database now</string>
    <string name="update_button_summary">Click the button to download the beacons information from the source url</string>
    <string name="url_not_avaliable">The url address is not correct, please check again</string>
    <string name="url_avaliable">download completed</string>
    <string name="pref_vibration_switch_summary">Use vibration when beacon is found nearby</string>
    <string name="pref_vibration_switch">Vibration Switch</string>
    <string name="search_mode"><![CDATA[=>]]></string>
    <string name="search_button">Search</string>
    <string name="description">description</string>
    <string name="beep_button">Beep !</string>
    <string name="sonar_button">Sonar</string>

    <!--=================== Settings ===================-->
    <string name="Settings_Activity_Name">Settings</string>
    <string name="cnst_period">prefFrequency</string>
    <string name="intent_gatt_open">OpenGatt</string>
    <string name="bndl_mac">mac</string>
    <string name="prefs_link_url">prefLink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_scan">scan for beacons</string>
    <string name="settings_menu_register_new_beacon">register new beacon</string>

    <!-- ========== -->
    <!-- BL Strings -->
    <!-- ========== -->
    <eat-comment/>

    <string name="txt_bl_needed_then_stop">This app needs bluetooth functionality to work!</string>
    <string name="txt_bl_descr_needed_then_stop">Please install this app on a device with bluetooth functionality.</string>
    <string name="txt_bl_requ_turn_on">This app needs bluetooth turned on to work!</string>
    <string name="txt_bl_descr_requ_turn_on">Please switch on bluetooth functionality or close the app.</string>
    <string name="txt_bl_adv_needed">This app needs bluetooth advertising to work!</string>
    <string name="txt_bl_descr_adv_needed">Please install this app on a device with bluetooth advertising functionality or close the app.</string>
    <string name="txt_bl_loc_req_turn_on">This app needs finer location access</string>
    <string name="txt_bl_descr_loc_requ_turn_on">Please grant permission to find bluetooth le devices or close the app.</string>
    <string name="txt_bl_descr_loc_turn_on_last">Please grant location access so this app can detect bluetooth le devices.</string>

    <!-- =============== -->
    <!-- General Strings -->
    <!-- =============== -->
    <eat-comment/>

    <string name="txt_ok">OK</string>
    <string name="txt_close">Close</string>
    <string name="txt_bt_from">From</string>
    <string name="txt_bt_to">to</string>
    <string name="txt_bt_sort">Sort by</string>
    <string name="txt_dia_choose_beacon">Choose a Beacon</string>
    <string name="pref_beep_freq_summary">Frequency in which the beacon will respond</string>
    <string name="pref_beep_freq">Beep frequency</string>
    <string name="pref_beep_dura_summary">Duration of the beep with which the beacon will respond in seconds</string>
    <string name="pref_beep_dura">Beep Duration</string>
    <string name="pref_beep_freq_key">prefBeepFreq</string>
    <string name="pref_beep_dura_key">prefBeepDura</string>
    <string name="txt_bt_calc">Calculate</string>
    <string name="txt_navi_way_to_room">"Way to Room "</string>
    <string name="txt_navi_target_reached">You\'ve reached your Target.</string>
    <string name="txt_navi_room">"Room: "</string>
    <string name="txt_navi_error_no_two_selected">You have to choose a start and an end</string>
    <string name="txt_navi_toast_calc_succ">Route calculation succeeded</string>
    <string name="txt_very_close">very close</string>
    <string name="txt_near">near</string>
    <string name="txt_in_range">in range</string>
    <string name="txt_out_of_range">out of range</string>
    <string name="txt_is_very_close">" is very close"</string>
    <string name="txt_is_near">" is near"</string>
    <string name="txt_is_in_range">" is in range"</string>
    <item name="activity" type="integer">123</item>
    <item name="service" type="integer">213</item>
    <item name="broadcast_receiver" type="integer">312</item>
</resources>
